# RPIPicoWWifiCred-Exp

./: .gitmodules  README.md
exp/Crypt/: CMakeLists.txt  coreHTTP.cmake  picoOnboardNVS.cmake  wolfssl_import.cmake
exp/Crypt/src/: CMakeLists.txt  CommsAgent.cpp  CommsAgent.h  WifiCred.cpp  WifiCred.h  main.cpp
exp/PlainTxt/port/FreeRTOS-Kernel/: FreeRTOSConfig.h
exp/PlainTxt/port/lwip/: lwipopts.h
exp/PlainTxt/port/wolfssl/: user_settings.h
exp/PlainTxt/src/: CMakeLists.txt  CommsAgent.cpp  WifiCred.cpp  WifiCred.h  main.cpp
exp/py/: testFake2Cred.py  testFakeCred.py  testNuke.py  testWifiCred.py
